--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,10 +1,10 @@
 on:
   workflow_dispatch: # To trigger workflow manually
-  schedule:
-    - cron: '0 */12 * * *' # every 12 hours
+  # schedule:
+  #   - cron: '0 */12 * * *' # every 12 hours
   push:
     branches:
-      - master
+      - main
 jobs:
   publish:
     runs-on: ubuntu-latest
