--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,6 +7,7 @@ on:
       - main
 jobs:
   publish:
+    if: false # disable workflow
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
