--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -44,7 +44,9 @@ jobs:
         uses: actions/configure-pages@v5
 
       - name: Install dependencies
-        run: pnpm cache delete && pnpm install # --frozen-lockfile
+        run: |
+          pnpm cache delete
+          pnpm install
         working-directory: ${{ env.BUILD_PATH }}
 
       - name: Build with Astro
